package structure.bridePattern.color;

public interface Color {

    String getColor();

}
