package structure.bridePattern.color;

public class Green implements Color {

    @Override
    public String getColor() {
        return "绿";
    }

}
