package structure.bridePattern.color;

public class Red implements Color {

    @Override
    public String getColor() {
        return "红";
    }

}
